[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/ui/tasks/chemical_cabinet/chemical_cabinet_ui.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/tasks/chemical_cabinet/texture/cabinet-ui-door-closed.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/tasks/chemical_cabinet/texture/cabinet-ui-cabinet.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/tasks/chemical_cabinet/texture/cabinet-ui-door-opened.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/tasks/chemical_cabinet/texture/cabinet-ui-door-handle.png" type="Texture" id=5]

[node name="ChemicalCabinet" type="WindowDialog"]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 20.0
anchor_bottom = 0.7
margin_left = -189.8
margin_top = -90.0
margin_right = -19471.0
margin_bottom = 165.0
focus_mode = 2
window_title = "Pick up the chemicals you need!"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cabinet" type="Sprite" parent="."]
position = Vector2( 497, 275 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )

[node name="DoorOpened" type="Sprite" parent="."]
visible = false
position = Vector2( 497, 275 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="DoorClosed" type="Sprite" parent="."]
position = Vector2( 497, 275 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="HandleLeft" type="Sprite" parent="DoorClosed"]
position = Vector2( -40.5, 0 )
texture = ExtResource( 5 )

[node name="HandleRight" type="Sprite" parent="DoorClosed"]
position = Vector2( 38.2, 0 )
texture = ExtResource( 5 )

[connection signal="popup_hide" from="." to="." method="_on_clockset_popup_hide"]
